1131573783	Erster Schritt zum Adminbereich: Logfiles eingebaut.
1131481330	Alte Nachrichten werden nun automatisch gelöscht, damit die Datenbank nicht zugemüllt wird.
1131465268	In den Highscores wird der eigene Name und der von Verbündeten nun auch farbig markiert.
1131464738	Diverse Änderungen an der Berechnung des Handelskurses vorgenommen.
1131461242	Konzept des Kontrollwesens geändert.
1131402233	In den Einstellungen trat ein Fehler mit dem Urlaubsmodus auf.
1131392505	Wieder ein paar MSIE-Bugs umgangen.
1131389909	Zu-schnell-Klicker werden nun ausgebremst.
1131384517	Nettes JavaScript-Feature eingebaut: Auto-Refresh der Rohstoffe.
1131295057	„Passwort vergessen“-Funktion eingebaut.
1131231448	„Fastread“-Funktion eingebaut.
1131204508	Nachrichten-Weiterleitung eingebaut.
1130528205	Anfängerschutz eingebaut.
1130525588	Konzept des Tritiumverbrauchs überarbeitet, Tritiumverbrauch hängt nun nicht mehr von der Ladung ab.
1130503913	Urlaubsmodus eingebaut.
1130493656	Kontrollwesen eingebaut.
1130451569	Handelsrechner für den Internet Explorer fähig gemacht.
1130451235	Handelsrechner eingebaut.
1130431829	Man kann nun Planeten aufgeben.
1130412401	JavaScript-Spielereien auch für den Internet Explorer fähig gemacht.
1130336591	JavaScript-Tooltips eingebaut.
1130274010	Domainregistrierung abgeschlossen, Spiel ist nun erreichbar unter http://s-u-a.net/
1130270454	Herausfinden der Planeteninformationen der Flottenbewegungen auf der Startseite: auf Performance hin optimiert, deutliche Geschwindigkeitsverbesserung.
1130187097	Schnell-Shortcuts eingebaut, JavaScript in andere Dateien verlagert.
1130086916	Bug in der Rohstoffproduktion behoben, bei Energiemangel wurden falsche Werte produziert.
1130016470	Erste Vorkehrungen fürs Handelssystem getroffen, Programme eingebaut, die den Handelskurs berechnen und Angebote auswerten.
1130001508	Bündnissystem eingebaut.
1129934263	Bugs im Kampf- und Flottensystem behoben.
1129918442	Rundungsfehler in der Rohstoffproduktion behoben.