@@ -1,16 +1,16 @@
-S0	Leichter Transporter	10000.7500.7500.0	3123	B10-2 F6-2	30000.0	0	0	5500	3 4 6	
-S1	Mittlerer Transporter	20000.9149.9149.0	4897	B10-6 F6-5	100000.0	0	0	8000	3 4 6	
-S2	Transporter „Arche Noah“	50000.25000.20000.0	6800	B10-11 F6-10	300000.3	0	0	10000	3 4 6	
-S3	Sammler „Hoover“	30000.20000.15000.5000	6756	B10-4 F5-2 F6-5	20000.0	0	0	3000	2 3 4 6	
-S5	Spionagesonde „Oculus Aquilæ“	0.5000.3459.0	1245	B10-2 F1-3 F6-3	0.0	0	0	1000000	5 6	
-S6	Besiedelungsschiff „Mayflower“	21000.15750.10500.	7249	B10-4 F6-5	0.0	0	0	7500	1 6	
-S7	Leichte Korvette	5000.2000.1000.348	3654	B10-2 F4-1 F6-2	2000.0	100	200	3000	3 4 6	
-S8	Mittlere Korvette	7500.3000.1500.600	5484	B10-4 F4-2 F6-3	3000.0	140	280	4000	3 4 6	
-S9	Soltari-Korvette	12000.6000.3589.1500	7135	B10-6 F4-4 F6-4	5000.0	280	400	5000	3 4 6	
-S10	Jotka-Fregatte	18000.12000.5000.2500	5387	B10-3 F4-2 F6-3	20000.0	330	1000	2500	3 4 6	
-S11	Kleib-Fregatte	25000.18539.9845.5000	7267	B10-5 F4-3 F6-4	30000.0	500	1400	3000	3 4 6	
-S12	Amann-Fregatte	35000.24000.14000.7500	8623	B10-7 F4-5 F6-5	50000.0	1000	2500	4000	3 4 6	
-S13	Sheliak-Kreuzer	40000.25000.17000.10000	7564	B10-12 F4-9 F7-3	5000.0	1000	650	1000	3 4 6	
-S14	Vega-Kreuzer	60000.40000.25983.15461	9093	B10-15 F4-10 F7-5	7000.0	1400	900	2500	3 4 6	
-S15	Nemesis-Kreuzer	80000.55000.40000.25000	14498	B10-20 F4-12 F7-8	15000.0	2500	1500	4250	3 4 6	
-S16	Torvalds-Schlachtschiff	250000.150000.100000.75000	36876	B10-30 F4-15 F5-10 F8-2	75000.0	10000	25000	5000	3 4 6	
+S0	Leichter Transporter	10000.7500.7500.0	3123	B10-2 F6-2	30000.0	0	200	5500	3 4 6
+S1	Mittlerer Transporter	20000.9149.9149.0	4897	B10-6 F6-5	100000.0	0	400	8000	3 4 6
+S2	Transporter „Arche Noah“	50000.25000.20000.0	6800	B10-11 F6-10	300000.3	0	600	10000	3 4 6
+S3	Sammler „Hoover“	30000.20000.15000.5000	6756	B10-4 F5-2 F6-5	20000.0	0	500	3000	2 3 4 6
+S5	Spionagesonde „Oculus Aquilæ“	0.5000.3459.0	1245	B10-2 F1-3 F6-3	0.0	0	50	1000000	5 6
+S6	Besiedelungsschiff „Mayflower“	21000.15750.10500.	7249	B10-4 F6-5	0.0	0	100	7500	1 6
+S7	Leichte Korvette	5000.2000.1000.348	3654	B10-2 F4-1 F6-2	2000.0	100	200	3000	3 4 6
+S8	Mittlere Korvette	7500.3000.1500.600	5484	B10-4 F4-2 F6-3	3000.0	140	280	4000	3 4 6
+S9	Soltari-Korvette	12000.6000.3589.1500	7135	B10-6 F4-4 F6-4	5000.0	280	400	5000	3 4 6
+S10	Jotka-Fregatte	18000.9000.5384.2250	5387	B10-3 F4-2 F6-3	20000.0	100	350	2500	3 4 6
+S11	Kleib-Fregatte	25000.18539.9845.5000	7267	B10-5 F4-3 F6-4	30000.0	175	500	3000	3 4 6
+S12	Amann-Fregatte	35000.24000.14000.7500	8623	B10-7 F4-5 F6-5	50000.0	225	850	4000	3 4 6
+S13	Sheliak-Kreuzer	40000.25000.17000.10000	7564	B10-12 F4-9 F7-3	5000.0	1000	650	1000	3 4 6
+S14	Vega-Kreuzer	60000.40000.25983.15461	9093	B10-15 F4-10 F7-5	7000.0	1400	900	2500	3 4 6
+S15	Nemesis-Kreuzer	80000.55000.40000.25000	14498	B10-20 F4-12 F7-8	15000.0	2500	1500	4250	3 4 6
+S16	Torvalds-Schlachtschiff	250000.150000.100000.75000	36876	B10-30 F4-15 F5-10 F8-2	75000.0	10000	25000	5000	3 4 6
