@@ -1,3 +1,4 @@
+1131727833	In den Abhängigkeiten kann man nun auf eine Abhängigkeit klicken, der Browser scrollt dann automatisch zu jenem Gegenstand hin.
 1131573783	Erster Schritt zum Adminbereich: Logfiles eingebaut.
 1131481330	Alte Nachrichten werden nun automatisch gelöscht, damit die Datenbank nicht zugemüllt wird.
 1131465268	In den Highscores wird der eigene Name und der von Verbündeten nun auch farbig markiert.
